--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,10 @@ steps:
     npm install
     ng build --configuration production
   displayName: 'npm install and build'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'dist'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+  displayName: 'Publish Build Artifacts'
